<resources>

    <string name="app_name">Knittersbox</string>

    <!-- .......   FRA MIKKEL START    ............................................................. -->
    <!-- Userprofile: -->
    <string name="userprofile_profile">Brukerprofil</string>
    <string name="userprofile_username">Brukernavn</string>
    <string name="userprofile_sub">Abonnement</string>
    <string name="userprofile_fname">Navn</string>
    <string name="userprofile_noname">Ikke lagt til</string>
    <!--    <string name="userprofile_sname">Etternavn</string>-->
    <string name="userprofile_email">E-post</string>
    <string name="userprofile_settingsbtn">Rediger profil</string>
    <string name="userprofile_pwdbtn">Endre passord</string>
    <string name="userprofile_address">Leveringsadresse</string>
    <!--    <string name="userprofile_postsbtn">Dine innlegg: 4</string>-->
    <!--    <string name="userprofile_header">Profil</string>-->
    <string name="userprofile_street">Gateadresse</string>
    <string name="userprofile_postnr">Postnummer</string>
    <string name="userprofile_city">Sted</string>
    <!-- Usersettings: -->
    <string name="usersettings_change_header_txt">Rediger profil</string>
    <string name="usrsettings_hint_usrname">Visningsnavn</string>
    <string name="usrsettings_hint_fname">Fornavn</string>
    <string name="usrsettings_hint_sname">Etternavn</string>
    <string name="usrsettings_hint_email">E-post</string>
    <string name="usrsettings_btn_savename">Oppdater profil</string>
    <string name="usersettings_change_psw_txt">Endre passord</string>
    <string name="usrsettings_hint_pwdold">Gammelt passord</string>
    <string name="usrsettings_hint_pwdnew">Nytt passord</string>
    <string name="usersettings_newpwdbtn">Endre passord</string>
    <!-- ......    FRA MIKKEL SLUTT    ............................................................................................. -->

    <!-- Registration -->
    <string name="registration">Registrer ny bruker</string>
    <string name="registration_firstname">Fornavn</string>
    <string name="registration_lastname">Etternavn</string>
    <string name="registration_email">Epost</string>
    <string name="registration_displayname">Visningsnavn</string>
    <string name="registration_password">Passord</string>
    <string name="registration_repassword">Bekreft passord</string>
    <string name="registration_buttonreg">Registrer</string>
    <string name="registration_buttonback">Tilbake</string>
    <!-- Login -->
    <string name="login_email">Epost</string>
    <string name="login_password">Passord</string>
    <string name="login_login">Logg inn</string>
    <string name="login_registrer">Registrer</string>
    <string name="knittersbox">knittersbox</string>

    <!-- inpirasjon -->
    <string name="title_activity_inspiration">Inspiration</string>
    <string name="inspiration_logo">Knittersbox.no</string>
    <string name="inspiration_takePic">Ta bilde</string>
    <string name="inspiration_gallary">Bilde fra galleri</string>
    <string name="inspiration_saysomething">Si noe om bildet</string>
    <string name="inspiration_title">Titel på innlegget</string>
    <string name="inspiration_newpost">Nytt innlegg</string>
    <string name="inspiration_newpic">Last opp bilde</string>
    <string name="inspiration_save">Publiser</string>
    <string name="inspiration_back">Tilbake</string>
    <string name="inspiration_checkbox">Ønsker du å være annonym?</string>
    <string name="inspiration_hint">Skriv tekst til bilde</string>
    <string name="noe">Noe</string>

    <!-- betalingsmetode -->
    <string name="payment_method_tittle">Betalingsmetode</string>
    <string name="payment_method_change">Legg til ny betalingsmetode</string>
    <string name="payment_method_tittle2">Ny betalingsmetode</string>
    <string name="payment_method_save">Lagre</string>
    <string name="payment_method_cardnr">Kortnummer:</string>
    <string name="payment_method_expirationDate">Utløpsdato:</string>
    <string name="payment_method_CVC">Kortkode (CVC)</string>
    <string name="payment_method_delete">Slett betalingsmetode</string>
    <string name="payment_method_writecardnr">Skriver kortnummer</string>
    <string name="payment_method_writeexp">Skriv utløpsdato</string>
    <string name="payment_method_writecvc">Skriv CVC</string>


    <!-- Menu -->
    <string name="menu_knittersbox">Knittersbox.no</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout">Logg ut</string>
    <string name="payment_method">Betalingsmetode</string>
    <string name="subcripstion">Abonnoment</string>
    <string name="faq">FAQ</string>
    <string name="userprofile">Brukerprofil</string>
    <string name="home">Hjem</string>

    <!-- Subscription -->
    <string name="subscription_tittle">Abonnement</string>
    <string name="subscription_aktiv">Aktivt abonnement</string>
    <string name="subscription_visadresse">Adresse</string>
    <string name="subscription_change">Endre</string>
    <string name="subscription_tittle2">Endre abonnement</string>
    <string name="subscription_spinnertext">Velg abonnement</string>
    <string name="subscription_save">Lagre</string>
    <string name="subscription_zipcode">Endre postnr</string>
    <string name="subscription_city">Endre by</string>
    <string name="subscription_adresse">Endre adresse</string>

    <!-- FAQ -->
    <string name="FAQ_tittle">FAQ</string>
    <string name="FAQ_tittle2">Ofte stilte spørsmål</string>

    <string name="personvern"><a href="https://knittersbox.no/personvern-2/">Godkjenner personvern og vilkår</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>