<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_tittle" />

    <TextView
        android:id="@+id/srPaymentCardnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_cardnr" />

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/white" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_expirationDate" />

    <TextView
        android:id="@+id/srPaymentExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_CVC" />
</LinearLayout>