<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/knittersbox" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:inputType="textEmailAddress"
        app:drawableLeftCompat="@drawable/ic_email"
        android:hint="@string/login_email"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:inputType="textPassword"
        app:drawableLeftCompat="@drawable/ic_password"
        android:hint="@string/login_password"
        android:drawablePadding="10dp"/>


    <Button
        android:id="@+id/login_loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/registration_lagre">
    </Button>

    <Button
        android:id="@+id/login_registrerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_registrer"
        android:textColor="@color/white"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/registration_lagre">
    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>