<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/white">

    <TextView
        android:id="@+id/registration_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="45sp" />


    <EditText
        android:id="@+id/registration_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="4dp"
        app:drawableLeftCompat="@drawable/ic_email"
        android:hint="@string/registration_email"
        android:autofillHints="@string/registration_email"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/registration_displayname"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="4dp"
        app:drawableLeftCompat="@drawable/ic_person_search"
        android:hint="@string/registration_displayname"
        android:autofillHints="registration_displayname"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="4dp"
        app:drawableLeftCompat="@drawable/ic_password"
        android:hint="@string/registration_password"
        android:autofillHints="registration_password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/registration_repassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="4dp"
        app:drawableLeftCompat="@drawable/ic_password"
        android:hint="@string/registration_repassword"
        android:autofillHints="registration_repassword"
        android:inputType="textPassword"
        android:drawablePadding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/terms_condition_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"></CheckBox>

        <TextView
            android:id="@+id/terms_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personvern"></TextView>
    </LinearLayout>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_buttonreg"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/registration_lagre"
        android:textAllCaps="false">
    </Button>

    <Button
        android:id="@+id/registration_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_buttonback"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/registration_lagre"
        android:textAllCaps="false">
    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>