<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".inspiration.Inspiration_newpost">
    <include
        layout="@layout/usersettings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/inspiration_newpost"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background = "@drawable/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:background="@drawable/white" />

            <ImageView
                android:id="@+id/new_memory_selected_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="visible"
                tools:srcCompat="@drawable/ic_baseline_image_24"
                android:contentDescription="@string/app_name"/>

            <EditText
                android:id="@+id/new_memory_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:ems="12"
                android:hint="@string/inspiration_title"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:textColorHint="@color/gray"
                android:autofillHints="@string/inspiration_title" />

            <EditText
                android:id="@+id/new_memory_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:ems="12"
                android:textColor="@color/black"
                android:hint="@string/inspiration_saysomething"
                android:textColorHint="@color/gray"
                android:autofillHints="@string/inspiration_saysomething"
                android:inputType="text" />

            <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/white" />

            <CheckBox
                android:id="@+id/inspiration_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/inspiration_checkbox" />

            <View
                android:id="@+id/divider13"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/userprofile_button"
                    android:onClick="openGallery"
                    android:text="@string/inspiration_gallary"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/userprofile_button"
                    android:onClick="openCamera"
                    android:text="@string/inspiration_takePic"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>





            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/inspiration_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/userprofile_button"
                    android:onClick="onClick"
                    android:text="@string/inspiration_save"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>