<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="payment_method.newPayment_method"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="@string/payment_method_tittle2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pay_save"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:text="@string/payment_method_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:backgroundTint="@color/endcolor"
        app:layout_constraintBottom_toTopOf="@+id/pay_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pay_back"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:text="@string/inspiration_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>