<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="userprofile.ChangePassword"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="userprofile.ChangePassword"
        android:background="@color/userprofile_gray"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/userprofile_shadow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="40dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="26dp"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    android:text="@string/usersettings_change_psw_txt" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_old"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/usrsettings_hint_pwdold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/usrsettings_hint_pwdnew" />

                            <Button
                                android:id="@+id/btn_updatepwd"
                                android:onClick="updatePassword"
                                android:layout_marginTop="30dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/userprofile_button"
                                android:textColor="@color/white"
                                android:text="@string/usersettings_newpwdbtn"/>
        <!--                            android:background="@drawable/userprofile_button"-->

                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>